[gd_scene load_steps=6 format=3 uid="uid://byoj1ms6tpcpc"]

[ext_resource type="Texture2D" uid="uid://mdm4pwpctn22" path="res://resources/sprites/Map.png" id="1_5ew5c"]
[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_g7dqg"]
[ext_resource type="PackedScene" uid="uid://dhvaxn0fiv8ly" path="res://scenes/barry/barry.tscn" id="1_xss6h"]
[ext_resource type="PackedScene" uid="uid://u5c3wc5ygn4y" path="res://scenes/floor/floor.tscn" id="2_d42ho"]
[ext_resource type="PackedScene" uid="uid://c4q7jgi3gw7yn" path="res://scenes/ceiling/ceiling.tscn" id="3_pluc3"]

[node name="Game" type="Node2D"]
script = ExtResource("1_g7dqg")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
unique_name_in_owner = true
offset_right = 226.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60
text = "Score: 0"

[node name="CoinsLabel" type="Label" parent="UI"]
unique_name_in_owner = true
offset_top = 83.0
offset_right = 226.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 60
text = "Coins: 0"

[node name="Timers" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="SpinnerSpawnTimer" type="Timer" parent="Timers"]
wait_time = 7.0
autostart = true

[node name="Background" type="Node2D" parent="."]

[node name="Floor" parent="Background" instance=ExtResource("2_d42ho")]

[node name="Ceiling" parent="Background" instance=ExtResource("3_pluc3")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_mirroring = Vector2(1362.42, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground/ParallaxLayer"]
position = Vector2(643, 362)
scale = Vector2(0.71, 0.71)
texture = ExtResource("1_5ew5c")

[node name="CharacterBody2D" parent="." groups=["barry"] instance=ExtResource("1_xss6h")]
position = Vector2(157, 539)

[node name="Bullets" type="Node2D" parent="." groups=["bullets"]]

[node name="Enemies" type="Node2D" parent="." groups=["enemies"]]

[node name="Coins" type="Node2D" parent="." groups=["coins"]]

[node name="Obstacles" type="Node2D" parent="." groups=["obstacles"]]

[connection signal="timeout" from="Timers/EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Timers/SpinnerSpawnTimer" to="." method="_on_spinner_spawn_timer_timeout"]
